Fix: SyncNow button 重复了，已去除，同时修复 sync 失败的错误

--- a/chat-memo-pro/_locales/zh_CN/messages.json
+++ b/chat-memo-pro/_locales/zh_CN/messages.json
@@ -299,6 +299,9 @@
    "signOut": {
       "message": "登出"
    },
+   "loggedInAs": {
+      "message": "已登录"
+   },
    "email": {
       "message": "邮箱"
    },
