--- a/chat-memo-pro/_locales/en/messages.json
+++ b/chat-memo-pro/_locales/en/messages.json
@@ -299,6 +299,9 @@
    "signOut": {
       "message": "Sign Out"
    },
+   "loggedInAs": {
+      "message": "Logged in as"
+   },
    "email": {
       "message": "Email"
    },
